  * Install bucket handling didn't work well for collection which weren't
    fully installed
  * The Metadata SQL query has been reworked to join tables in a much
    better order, speeding up the getMetadata call on a repository
    with many versions much faster.
  * Fixed bug where database was left locked on exception during install
    when the download thread was still executing

Changes in 0.62.12:
  * Conary will no longer create a "rootroot" group while installing
    users whose primary group is "root".  It will now call the
    appropriate tag handler for user/group modifications if the tag
    handler is installed.
  * EnforceConfigLogBuildRequirements no longer suggests recursive
    build requirements for packages in which the configure script
    checks to see if the package is already installed.
  * Installing new version of pinned troves leaves the pinned trove in
    place if the two troves have compatible install buckets
  * By default, when you shadow a binary trove, its source is shadowed with it.
  * Instead of a --sources option, cvc shadow and cvc branch now take
    --source-only and --binary-only options that allow you to control whether
    sources or binaries are shadowed. 
  * Branch and shadow commands now take an unlimited number of troves
    to branch/shadow.
  * Files sharing versions but with different contents (thanks to flavors)
    got lost when switching from one flavor of a trove to another
  * troves can now be specified for rq, q, and update as <labelpart>/<version>,
    e.g., foo=:rpl1/1.0, or foo=contrib.rpath.com@/2.3-1-2
  * version.hasParent() handles more cases of shadows of shadows correctly.
  * cooking troves into the repository with --flavor <newflavor> now modifies 
    the flavor before the recipe is even loaded, not when the recipe's setup
    function is called.
  * add a check to ensure RPATHs in cooked packages do not have %(destdir)s 
    or /tmp or /var/tmp in them.